--- a/p1/index.html
+++ b/p1/index.html
@@ -34,6 +34,31 @@
         .graduacao { color: #d4af37; font-size: 0.8rem; font-weight: bold; }
         .nome-guerra { font-size: 1rem; display: block; margin-top: 2px; }
         .search-bar { width: 90%; padding: 12px; margin: 20px auto; display: block; border-radius: 25px; border: none; background: #333; color: white; }
+        .hidden { display: none !important; }
+
+#login-container {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-box {
+    background: #252525;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+}
+
+.login-box input {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    background: #1a1a1a;
+    border: 1px solid #333;
+    color: white;
+}
     </style>
 </head>
 <body>
