--- a/p1/index.html
+++ b/p1/index.html
@@ -3,96 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P1 - Álbum do Efetivo | 1º BPM</title>
+    <title>Efetivo 1º BPM - P1</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         /* Estilos específicos para o Álbum */
-        .grid-album {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 15px;
-            padding: 20px;
-        }
-        .militar-card {
-            background: #252525;
-            border-radius: 10px;
-            padding: 10px;
-            text-align: center;
-            cursor: pointer;
-            border: 1px solid #333;
-            transition: 0.2s;
-        }
-        .militar-card:hover { border-color: #d4af37; transform: scale(1.05); }
-        .foto-perfil {
-            width: 100%;
-            aspect-ratio: 3/4;
-            background: #111;
-            border-radius: 5px;
-            margin-bottom: 8px;
-            object-fit: cover;
-        }
-        .graduacao { color: #d4af37; font-size: 0.8rem; font-weight: bold; }
-        .nome-guerra { font-size: 1rem; display: block; margin-top: 2px; }
-        .search-bar { width: 90%; padding: 12px; margin: 20px auto; display: block; border-radius: 25px; border: none; background: #333; color: white; }
-        .hidden { display: none !important; }
-
-#login-container {
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.login-box {
-    background: #252525;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-}
-
-.login-box input {
-    display: block;
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
-    background: #1a1a1a;
-    border: 1px solid #333;
-    color: white;
-}
+        .navbar { background: #1a5c37; color: white; padding: 1rem; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
+        .grid-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; padding: 20px; }
+        .card { background: white; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); overflow: hidden; text-align: center; padding-bottom: 15px; transition: transform 0.2s; }
+        .card:hover { transform: translateY(-5px); }
+        .foto-militar { width: 100%; height: 250px; object-fit: cover; background: #eee; }
+        .info-militar { padding: 10px; }
+        .graduacao { font-weight: bold; color: #1a5c37; display: block; }
+        .nome-guerra { font-size: 1.1rem; color: #333; }
+        .btn-logout { background: #d9534f; color: white; border: none; padding: 8px 15px; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
 
-    <header>
-        <a href="../index.html" style="color: #999; text-decoration: none;">← Voltar ao Início</a>
-        <h1>Álbum do Efetivo - 1º BPM</h1>
-    </header>
-
-    <input type="text" id="inputBusca" class="search-bar" placeholder="🔍 Digite Nome de Guerra ou Matrícula..." onkeyup="filtrarAlbum()">
-
-    <div id="album" class="grid-album">
-        <div class="militar-card" onclick="abrirFicha('100094651')">
-            <div class="foto-perfil"></div> <span class="graduacao">TEN CEL PM</span>
-            <span class="nome-guerra">MIRANDA</span>
+    <div class="navbar">
+        <span id="boas-vendas">Carregando...</span>
+        <div>
+            <input type="text" id="busca" placeholder="Filtrar por nome..." onkeyup="filtrar()" style="width: 200px; padding: 5px; margin-right: 15px; border-radius: 4px; border: none;">
+            <button class="btn-logout" onclick="logout()">Sair</button>
         </div>
     </div>
 
-    <script>
-        // Função para filtro instantâneo
-        function filtrarAlbum() {
-            let input = document.getElementById('inputBusca').value.toLowerCase();
-            let cards = document.getElementsByClassName('militar-card');
-            
-            for (let i = 0; i < cards.length; i++) {
-                let nome = cards[i].innerText.toLowerCase();
-                cards[i].style.display = nome.includes(input) ? "" : "none";
-            }
-        }
+    <div class="grid-container" id="album-efetivo">
+        </div>
 
-        function abrirFicha(matricula) {
-            // Aqui entrará a lógica de conferir nível de acesso antes de abrir
-            alert("Solicitando acesso à ficha da matrícula: " + matricula);
-        }
-    </script>
+    <script src="p1-script.js"></script>
 </body>
 </html>
