--- a/p1/index.html
+++ b/p1/index.html
@@ -48,10 +48,10 @@
 
         /* Container do Álbum (Margem superior para não ficar embaixo da barra) */
         .album-wrapper {
-            margin-top: 80px; 
-            padding: 20px;
-            display: flex;
-            justify-content: center;
+    margin-top: 100px; /* Aumentamos de 80px para 100px ou 120px */
+    padding: 20px;
+    display: flex;
+    justify-content: center;
         }
 
         /* Grade de Fotos - LADO A LADO */
