--- a/p1/index.html
+++ b/p1/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <style>
         /* Reset e Base */
+        * { box-sizing: border-box; } /* Ajuste técnico para layout */
         body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; }
         
         /* Barra Superior Fixa */
@@ -46,12 +47,12 @@
             font-weight: bold;
         }
 
-        /* Container do Álbum (Margem superior para não ficar embaixo da barra) */
+        /* Container do Álbum - "Desenterrando" a primeira linha */
         .album-wrapper {
-    margin-top: 100px; /* Aumentamos de 80px para 100px ou 120px */
-    padding: 20px;
-    display: flex;
-    justify-content: center;
+            margin-top: 80px; /* Se 100px ficar muito longe, 80px costuma ser o ideal para barra de 60px */
+            padding: 20px;
+            display: flex;
+            justify-content: center;
         }
 
         /* Grade de Fotos - LADO A LADO */
@@ -77,12 +78,21 @@
 
         .militar-card:hover { transform: translateY(-5px); box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
 
-        .foto-container { width: 100%; height: 200px; background-color: #e9ecef; }
+        .foto-container { width: 100%; height: 220px; background-color: #e9ecef; }
         .foto-container img { width: 100%; height: 100%; object-fit: cover; }
 
         .militar-info { padding: 12px; }
         .militar-info .graduacao { display: block; font-size: 0.8rem; color: #1a5c37; font-weight: bold; text-transform: uppercase; }
-        .militar-info .nome-guerra { display: block; font-size: 1rem; color: #333; font-weight: bold; margin-top: 2px; }
+        .militar-info .nome-guerra { 
+            display: block; 
+            font-size: 1rem; 
+            color: #333; 
+            font-weight: bold; 
+            margin-top: 2px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis; /* Se o nome for gigante, ele coloca "..." */
+        }
     </style>
 </head>
 <body>
