--- a/p1/index.html
+++ b/p1/index.html
@@ -14,30 +14,33 @@
             color: white;
             padding: 0 20px;
             display: flex;
-            justify-content: center; /* Centraliza o conteúdo da barra */
+            justify-content: center;
             position: fixed;
             top: 0; left: 0; right: 0;
-            height: 70px; 
+            height: 80px; /* Aumentado levemente */
             z-index: 2000;
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
         }
 
         .header-content {
             width: 100%;
-            max-width: 1200px; /* Limita a largura da barra superior */
+            max-width: 1200px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: 20px;
         }
+
+        #usuario-logado { font-weight: bold; font-size: 1.1rem; min-width: fit-content; }
 
         .search-container { display: flex; gap: 10px; align-items: center; flex: 1; justify-content: flex-end; }
         
         input#busca { 
-            padding: 10px 15px; 
+            padding: 10px 18px; 
             border-radius: 20px; 
             border: none; 
             width: 100%; 
-            max-width: 300px; /* Impede a barra de pesquisa de ser gigante */
+            max-width: 350px; 
             outline: none; 
         }
 
@@ -46,7 +49,7 @@
         .btn-refresh { background-color: #f0ad4e; }
 
         .album-wrapper {
-            padding-top: 100px; 
+            margin-top: 110px; /* VALOR AUMENTADO PARA DESENTERRAR A PRIMEIRA LINHA */
             padding-bottom: 40px;
             display: flex;
             justify-content: center;
@@ -57,9 +60,9 @@
             grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
             gap: 20px;
             width: 95%;
-            max-width: 1200px; /* Mantém o álbum centralizado e elegante */
+            max-width: 1200px;
         }
-        /* ... (militar-card e demais estilos mantidos do seu original) ... */
+
         .militar-card { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: 0.2s; cursor: pointer; text-align: center; border-bottom: 4px solid #1a5c37; }
         .militar-card:hover { transform: translateY(-5px); }
         .foto-container { width: 100%; height: 220px; background-color: #e9ecef; }
@@ -72,9 +75,9 @@
 <body>
     <header class="header-p1">
         <div class="header-content">
-            <div id="usuario-logado" style="font-weight: bold; white-space: nowrap;">P1 - 1º BPM</div>
+            <div id="usuario-logado">P1 - Carregando...</div>
             <div class="search-container">
-                <input type="text" id="busca" placeholder="🔍 Pesquisar..." onkeyup="filtrar()">
+                <input type="text" id="busca" placeholder="🔍 Pesquisar militar..." onkeyup="filtrar()">
                 <button class="btn-header btn-refresh" onclick="atualizarDados()" title="Sincronizar">🔄</button>
                 <button class="btn-header btn-logout" onclick="logout()" title="Sair">🚪</button>
             </div>
@@ -88,5 +91,16 @@
     <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
     <script src="p1-script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const user = JSON.parse(sessionStorage.getItem("usuario"));
+            const label = document.getElementById('usuario-logado');
+            if (user && label) {
+                // Se o cargo no login for ADMIN, aparece ADMIN, senão P1
+                const cargo = (user.cargo || "P1").toUpperCase(); 
+                label.innerText = `${cargo} - Olá, ${user.nomeGuerra || 'Usuário'}`;
+            }
+        });
+    </script>
 </body>
 </html>
