--- a/p1/index.html
+++ b/p1/index.html
@@ -9,18 +9,20 @@
         * { box-sizing: border-box; } 
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; overflow-x: hidden; }
         
-        .header-p1 {
-            background-color: #1a5c37;
-            color: white;
-            padding: 0 20px;
-            display: flex;
-            justify-content: center;
-            position: fixed;
-            top: 0; left: 0; right: 0;
-            height: 80px; /* Aumentado levemente */
-            z-index: 2000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-        }
+       .header-p1 {
+        background-color: #1a5c37;
+        color: white;
+        padding: 0 20px;
+        display: flex;
+        justify-content: center;
+        position: fixed; /* Fixa no topo */
+        top: 0; 
+        left: 0; 
+        right: 0;
+        height: 85px; /* Altura fixa definida */
+        z-index: 2000;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
 
         .header-content {
             width: 100%;
@@ -48,21 +50,25 @@
         .btn-logout { background-color: #d9534f; }
         .btn-refresh { background-color: #f0ad4e; }
 
-        .album-wrapper {
-            margin-top: 110px; /* VALOR AUMENTADO PARA DESENTERRAR A PRIMEIRA LINHA */
-            padding-bottom: 40px;
-            display: flex;
-            justify-content: center;
-        }
+       .album-wrapper {
+        /* O "pulo do gato": o padding-top deve ser MAIOR que a altura do header */
+        padding-top: 130px; 
+        padding-bottom: 50px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        min-height: 100vh; /* Garante que o fundo cubra a tela toda */
+    }
 
-        .grid-efetivo {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-            gap: 20px;
-            width: 95%;
-            max-width: 1200px;
-        }
-
+    .grid-efetivo {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        gap: 25px; /* Aumentei o espaço entre cards */
+        width: 95%;
+        max-width: 1200px;
+        /* Removi margens negativas que poderiam estar puxando o grid pra cima */
+        margin: 0 auto; 
+    }
         .militar-card { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: 0.2s; cursor: pointer; text-align: center; border-bottom: 4px solid #1a5c37; }
         .militar-card:hover { transform: translateY(-5px); }
         .foto-container { width: 100%; height: 220px; background-color: #e9ecef; }
