--- a/p1/index.html
+++ b/p1/index.html
@@ -9,20 +9,18 @@
         * { box-sizing: border-box; } 
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; overflow-x: hidden; }
         
-       .header-p1 {
-        background-color: #1a5c37;
-        color: white;
-        padding: 0 20px;
-        display: flex;
-        justify-content: center;
-        position: fixed; /* Fixa no topo */
-        top: 0; 
-        left: 0; 
-        right: 0;
-        height: 85px; /* Altura fixa definida */
-        z-index: 2000;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    }
+        .header-p1 {
+            background-color: #1a5c37;
+            color: white;
+            padding: 0 20px;
+            display: flex;
+            justify-content: center;
+            position: fixed; 
+            top: 0; left: 0; right: 0;
+            height: 85px; 
+            z-index: 2000;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+        }
 
         .header-content {
             width: 100%;
@@ -31,6 +29,13 @@
             justify-content: space-between;
             align-items: center;
             gap: 20px;
+        }
+
+        /* ESTE É O SEGREDO: Um calço que ocupa espaço real na página */
+        .spacer {
+            height: 100px; 
+            width: 100%;
+            display: block;
         }
 
         #usuario-logado { font-weight: bold; font-size: 1.1rem; min-width: fit-content; }
@@ -50,25 +55,26 @@
         .btn-logout { background-color: #d9534f; }
         .btn-refresh { background-color: #f0ad4e; }
 
-       .album-wrapper {
-        /* O "pulo do gato": o padding-top deve ser MAIOR que a altura do header */
-       padding-top: 200px !important;
-        padding-bottom: 50px;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        min-height: 100vh; /* Garante que o fundo cubra a tela toda */
-    }
+        .album-wrapper {
+            margin-top: 0 !important; /* Remove qualquer puxão para cima */
+            padding-top: 20px !important; 
+            padding-bottom: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            min-height: 100vh;
+        }
 
-    .grid-efetivo {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-        gap: 25px; /* Aumentei o espaço entre cards */
-        width: 95%;
-        max-width: 1200px;
-        /* Removi margens negativas que poderiam estar puxando o grid pra cima */
-        margin: 0 auto; 
-    }
+        .grid-efetivo {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 25px; 
+            width: 95%;
+            max-width: 1200px;
+            margin: 0 auto !important; /* Centraliza sem margens extras */
+        }
+
         .militar-card { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: 0.2s; cursor: pointer; text-align: center; border-bottom: 4px solid #1a5c37; }
         .militar-card:hover { transform: translateY(-5px); }
         .foto-container { width: 100%; height: 220px; background-color: #e9ecef; }
@@ -90,6 +96,8 @@
         </div>
     </header>
 
+    <div class="spacer"></div>
+
     <main class="album-wrapper">
         <div class="grid-efetivo" id="container-cards"></div>
     </main>
@@ -102,8 +110,7 @@
             const user = JSON.parse(sessionStorage.getItem("usuario"));
             const label = document.getElementById('usuario-logado');
             if (user && label) {
-                // Se o cargo no login for ADMIN, aparece ADMIN, senão P1
-                const cargo = (user.cargo || "P1").toUpperCase(); 
+                const cargo = (user.nivel || "P1").toUpperCase(); 
                 label.innerText = `${cargo} - Olá, ${user.nomeGuerra || 'Usuário'}`;
             }
         });
