--- a/p1/index.html
+++ b/p1/index.html
@@ -109,6 +109,14 @@
                 <input type="text" id="busca" placeholder="🔍 Pesquisar militar..." onkeyup="filtrar()">
                 <button class="btn-header btn-refresh" onclick="atualizarDados()" title="Sincronizar">🔄</button>
                 <button class="btn-header btn-logout" onclick="logout()" title="Sair">🚪</button>
+
+        <div class="search-container">
+    <input type="text" id="busca" placeholder="🔍 Pesquisar militar..." onkeyup="filtrar()">
+    <button class="btn-header" style="background-color: #28a745;" onclick="abrirModalNovo()" title="Novo Militar">➕</button>
+    <button class="btn-header btn-refresh" onclick="atualizarDados()" title="Sincronizar">🔄</button>
+    <button class="btn-header btn-logout" onclick="logout()" title="Sair">🚪</button>
+</div>
+               
             </div>
         </div>
     </header>
