--- a/p1/index.html
+++ b/p1/index.html
@@ -111,8 +111,8 @@
             <div id="usuario-logado">P1 - Carregando...</div>
             
             <div class="search-container">
-                <select id="filtro-secao" class="select-filtro" onchange="filtrar()">
-                    <option value="">📂 Todas Seções</option>
+                <select id="filtro-local" class="select-filtro" onchange="filtrar()">
+                    <option value="">📂 LOCAIS</option>
                     <option value="COMANDO">Comando</option>
                     <option value="P1">P1</option>
                     <option value="P2">P2</option>
